# filament-maker

./: CMakeLists.txt  cylinder.cpp  cylinder.h  elemental_strand.cpp  elemental_strand.h  filament.cpp  filament.h  gyroid.cpp  gyroid.h  macros.h  main.cpp  main__trash  packing.cpp  packing.h  sphere.cpp  sphere.h  strand.cpp  strand.h  xml_file_interactor.cpp  xml_file_interactor.h  xml_file_interactor__trash
PDB/: Residue.h  atom.cpp  atom.h  chain.cpp  chain.h  pdb.cpp  pdb.h  residue.cpp
example/: example.xml  example_seven_tetramers.xml  example_simple.xml  example_simple_2.xml  example_stationary_vs_rotational.xml
pdb/: CMakeLists.txt  atom.h  pdb_viewer.cpp  pdb_viewer.h  residue.h
