cmake_minimum_required (VERSION 2.6) 

PROJECT(main)

include_directories("/usr/local/include/rapidxml-1.13/" ${main_SOURCE_DIR} ${main_SOURCE_DIR}/pdb)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_subdirectory(pdb)
link_directories(${main_BINARY_DIR}/pdb)
add_executable(main MACOSX_BUNDLE main.cpp xml_file_interactor cylinder strand elemental_strand)
target_link_libraries(main pdb)
if(VTK_LIBRARIES)
  target_link_libraries(main ${VTK_LIBRARIES})
  message("Linked to vtk libraries.")
else()
  target_link_libraries(main vtkHybrid)
endif()
